--- a/.github/workflows/rpi4-matrix.yaml
+++ b/.github/workflows/rpi4-matrix.yaml
@@ -20,7 +20,7 @@ jobs:
         IMG-NAME: [BigLinux]
         DEVICE: [rpi4]
         # EDITION: [gnome,kde-plasma,mate,minimal,sway,xfce]
-        EDITION: [kde-plasma,minimal,iot]
+        EDITION: [kde-plasma,minimal,iot,generic]
         BRANCH: [stable]
     steps:
       - id: time
