--- a/.github/workflows/rootfs_build.yaml
+++ b/.github/workflows/rootfs_build.yaml
@@ -155,7 +155,7 @@ jobs:
           #editar arquivo /usr/bin/buildrootfs
           #edicionar mais pacotes na linha:
           #$LIBDIR/pacstrap -G -M -C $LIBDIR/pacman.conf.$ARCH $BUILDDIR/$ARCH pacman
-          newPackages="git biglinux-keyring"
+          newPackages="git biglinux-arm-keyring"
           sudo sed -i "/pacstrap/s/pacman/pacman $newPackages/2" /usr/bin/buildrootfs
           
           #remover compress e gerar rootfs
