--- a/.github/workflows/rpi4-matrix-development.yaml
+++ b/.github/workflows/rpi4-matrix-development.yaml
@@ -41,7 +41,8 @@ jobs:
           
       - id: image-build
         name: Image Build
-        uses: BigLinux-Package-Build/build-iso-arm@main
+        # uses: BigLinux-Package-Build/build-iso-arm@main
+        uses: manjaro-arm/rootfs@master
         with:
           img-name: ${{ matrix.img-name }}
           name: ${{ steps.name.outputs.name }}
