--- a/.github/workflows/rpi4-matrix-development.yaml
+++ b/.github/workflows/rpi4-matrix-development.yaml
@@ -69,6 +69,7 @@ jobs:
           files: |
             ${{ env.FILE_PATH }}
             ${{ env.FILE_SHA1 }}
+            ${{ env.FILE_SHA256 }}
             ${{ env.FILE_TORRENT }}
             ${{ env.FILE_PKG }}
             #${{ env.FILE_SIG }}
