--- a/action.yml
+++ b/action.yml
@@ -83,8 +83,9 @@ runs:
       shell: bash
       run: |
         #Install Build Dependencies
-        sudo apt-get update
-        sudo apt-fast install -y \
+        sudo apt update
+        # sudo apt-fast install -y \
+        sudo apt install -y \
           gdisk \
           zip \
           systemd-container \
@@ -394,6 +395,8 @@ runs:
           
         sha1sum $(basename $FILE_PATH) > $(basename $FILE_PATH).sha1
         echo "file-sha1=$(basename $FILE_PATH).sha1" >> $GITHUB_OUTPUT
+        sha256sum $(basename $FILE_PATH) > $(basename $FILE_PATH).sha256
+        echo "file-sha256=$(basename $FILE_PATH).sha256" >> $GITHUB_OUTPUT
         mktorrent -v -a udp://tracker.opentrackr.org:1337 -l 21 -w https://github.com/$GITHUB_REPOSITORY/releases/download/$VERSION/$(basename $FILE_PATH) -o $(basename $FILE_PATH).torrent $(basename $FILE_PATH)
         echo "file-torrent=$(basename $FILE_PATH).torrent" >> $GITHUB_OUTPUT
         
@@ -435,6 +438,7 @@ runs:
         # Copy filepaths
         echo "FILE_PATH=$(basename $FILE_PATH)" >> $GITHUB_ENV
         echo "FILE_SHA1=$(basename $FILE_PATH).sha1" >> $GITHUB_ENV
+        echo "FILE_SHA256=$(basename $FILE_PATH).sha256" >> $GITHUB_ENV
         echo "FILE_TORRENT=$(basename $FILE_PATH).torrent" >> $GITHUB_ENV
         #echo "FILE_SIG=$(basename $FILE_PATH).sig" >> $GITHUB_ENV
           
