--- a/.github/workflows/rootfs_build.yaml
+++ b/.github/workflows/rootfs_build.yaml
@@ -190,17 +190,22 @@ jobs:
           SigLevel = Optional TrustAll
           Server = https://repo.biglinux.com.br/stable/$arch' | sudo tee -a $BUILDDIR/$ARCH/etc/pacman.conf
           
-          rm -f "$BUILDDIR/$ARCH/etc/resolv.conf"
-          echo "nameserver 1.1.1.1" > "$BUILDDIR/$ARCH/etc/resolv.conf"
-          mount --bind "$BUILDDIR/$ARCH/" "$BUILDDIR/$ARCH/"
-          mount --bind /dev "$BUILDDIR/$ARCH/dev"
-          mount --bind /proc "$BUILDDIR/$ARCH/proc"
-          mount --bind /sys "$BUILDDIR/$ARCH/sys"
-          chroot "$BUILDDIR/$ARCH" pacman-key --init
-          chroot "$BUILDDIR/$ARCH" pacman-key --populate manjaro
-          chroot "$BUILDDIR/$ARCH" pacman-key --populate archlinuxarm
-          chroot "$BUILDDIR/$ARCH" pacman-key --populate biglinux
-          chroot "$BUILDDIR/$ARCH" pacman -Sy --noconfirm util-linux
+          #Polulate Keys and install some programs
+          sudo rm -f "$BUILDDIR/$ARCH/etc/resolv.conf"
+          echo "nameserver 1.1.1.1" | sudo tee "$BUILDDIR/$ARCH/etc/resolv.conf"
+          sudo mount --bind "$BUILDDIR/$ARCH/" "$BUILDDIR/$ARCH/"
+          sudo mount --bind /dev "$BUILDDIR/$ARCH/dev"
+          sudo mount --bind /proc "$BUILDDIR/$ARCH/proc"
+          sudo mount --bind /sys "$BUILDDIR/$ARCH/sys"
+          sudo chroot "$BUILDDIR/$ARCH" pacman-key --init
+          sudo chroot "$BUILDDIR/$ARCH" pacman-key --populate manjaro
+          sudo chroot "$BUILDDIR/$ARCH" pacman-key --populate archlinuxarm
+          sudo chroot "$BUILDDIR/$ARCH" pacman-key --populate biglinux
+          sudo chroot "$BUILDDIR/$ARCH" pacman -Sy --noconfirm util-linux
+          sudo rm -rf "$BUILDDIR/$ARCH/var/cache/pacman/pkg/"
+          sudo umount -l "$BUILDDIR/$ARCH/sys"
+          sudo umount -l "$BUILDDIR/$ARCH/proc"
+          sudo umount -l "$BUILDDIR/$ARCH/dev"
           
           pwd=$PWD
           
