--- a/action.yml
+++ b/action.yml
@@ -105,6 +105,36 @@ runs:
         sudo dpkg -x grub-efi-arm64-bin_2.06-2ubuntu14.1_arm64.deb /
         
         sudo rm -r *.deb
+        
+    - name: clean-system
+      shell: bash
+      run: |
+        echo "### Clean System ###"
+        sudo rm -rf \
+        /imagegeneration \
+        /opt/az \
+        /opt/ghc \
+        /opt/pipx \
+        /opt/google \
+        /opt/microsoft \
+        /opt/hostedtoolcache \
+        /usr/lib/llvm* \
+        /var/lib/mysql \
+        /var/lib/snapd \
+        /var/cache/apt \
+        /var/lib/docker \
+        /usr/lib/google* \
+        /usr/lib/firefox \
+        /usr/local/julia* \
+        /usr/local/.ghcup \
+        /usr/local/aws-cli \
+        /usr/local/lib/android \
+        /usr/local/aws-sam-cli \
+        /usr/local/share/chromium \
+        /usr/local/lib/node_modules \
+        /usr/local/share/powershell \
+        /usr/share/swift \
+        /usr/share/dotnet
           
     - id: install-pacman
       shell: bash
