--- a/.github/workflows/rpi4-matrix-development.yaml
+++ b/.github/workflows/rpi4-matrix-development.yaml
@@ -67,7 +67,7 @@ jobs:
           prerelease: false
           files: |
             ${{ env.FILE_PATH }}
-            ${{ env.FILE_SHA1 }}
+            #${{ env.FILE_SHA1 }}
             ${{ env.FILE_SHA256 }}
             ${{ env.FILE_TORRENT }}
             ${{ env.FILE_PKG }}
